<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icm20948_hardware</name>
  <version>0.0.0</version>
  <description
  >Provides ros2_control sensor interface for the ICM20948 IMU</description>
  <maintainer email="justin@lopato.org">lopatoj</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>control_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>hardware_interface</depend>
  <depend>generate_parameter_library</depend>
  <depend>sensor_msgs</depend>
  <depend>realtime_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
